--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           if [ ${{ matrix.dir }} == 'grid-proxy' ]; then
             cmds/proxy_server/server -v
           elif [ ${{ matrix.dir }} == 'grid-cli' ]; then
-            bin/tf-grid-cli version
+            bin/tfcmd version
           else
             bin/${{ matrix.dir }} version
           fi
