Add entry for tf-grid-cli

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,6 +32,22 @@ builds:
       - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.version={{.Tag}}
       - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.commit={{.Commit}}
 
+  - dir: ./grid-cli
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+    binary: tf-grid-cli
+    id: tf-grid-cli
+
+    ignore:
+      - goos: windows
+    ldflags:
+      - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.version={{.Tag}}
+      - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.commit={{.Commit}}
+
   - dir: ./grid-proxy/cmds/proxy_server
     env:
       - CGO_ENABLED=0
