add more validation and use gopkg.in/validator.v2

--- a/mass-deployer/Dockerfile
+++ b/mass-deployer/Dockerfile
@@ -19,7 +19,7 @@ COPY /mass-deployer/go.mod .
 
 RUN go mod download
 
-COPY /mass-deployer/ ./
+COPY /mass-deployer/ .
 
 RUN go build -o bin/tfrobot main.go
 
