--- a/mass-deployer/example/conf.yaml
+++ b/mass-deployer/example/conf.yaml
@@ -17,16 +17,16 @@ vms:
     cpu: 1 # number of logical cores
     mem: 256 # amount of memory in MB
     ssd: # list of ssd storage needed to be mounted to the vm
-      size: 5 # size in GB
-      mount_point: /mnt/ssd
-    pubip4: false
-    pubip6: false
+      - size: 5 # size in GB
+        mount_point: /mnt/ssd
+    public_ip4: false
+    public_ip6: false
     flist: https://hub.grid.tf/tf-official-apps/base:latest.flist
     entry_point: /sbin/zinit init
     root_size: 0 # root size in GB
     ssh_key: example1 # the name of the predefined ssh key
 
-ssh_key: # map of ssh keys with key=name and value=the actual ssh key
+ssh_keys: # map of ssh keys with key=name and value=the actual ssh key
   example1: ssh_key1
 mnemonic: example-mnemonic # mnemonic of the user
 network: dev # eg: main, test, qa, dev
