--- a/mass-deployer/.gitignore
+++ b/mass-deployer/.gitignore
@@ -1,2 +1,24 @@
-config.yaml
-bin
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+
+coverage/
+bin/
+*.json
+*.yml
+*.yaml
+*.log
+*.env
