--- a/mass-deployer/example/conf.yaml
+++ b/mass-deployer/example/conf.yaml
@@ -8,7 +8,7 @@ node_groups:
     dedicated: false # are nodes dedicated
     public_ip4: false # should the nodes have free ip v4
     public_ip6: false # should the nodes have free ip v6
-    certified: false # should the nodes be certified(if false the nodes could be certified of diyed) 
+    certified: false # should the nodes be certified(if false the nodes could be certified or DIY) 
     region: "europe" # region could be the name of the continents the nodes are located in (africa, americas, antarctic, antarctic ocean, asia, europe, oceania, polar)
 vms:
   - name: examplevm
