postpone power state check for immediate wake ups

--- a/farmerbot/Dockerfile
+++ b/farmerbot/Dockerfile
@@ -4,6 +4,10 @@ WORKDIR /src/rmb-sdk-go
 
 COPY /rmb-sdk-go .
 
+WORKDIR /src/grid-proxy
+
+COPY /grid-proxy .
+
 WORKDIR /src/farmerbot
 
 COPY /farmerbot .
