Add cache-warmer to image publish workflow

--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -32,6 +32,8 @@ jobs:
             image: "tffarmerbot"
           - dir: "grid-proxy"
             image: "tfgridproxy"
+          - dir: "tools/relay-cache-warmer"
+            image: "relay-cache-warmer"
 
     steps:
       - name: Checkout the repo
