abstract the indexer pkg code using generics
Description:

- redefining the indexer structs to be a single generic indexer without manager, each indexer should do the generic functions of find/get/batch/upsert results. with each indexer have different job based on the defined type will creating the indexer.
- each indexer job should only handle its specific job of:
    - just defining its finders or triggers
    - preparing the rmb call to the node, parse the response and return a ready db model template that can stored
    - upserting its restults by updating or descarding or inserting the passed arguments
- the indexer code is the one responsible for doing the logic, by
    - executing the finders methods for each indexer as it is defined in its job based on the interval
    - starting the getter worker that invoke the get method on the work
    - starting a batcher for each indexer, that have two channels as its ends
    - starting the upserter worker that invoke the upsert method on the work

Changes:

- remove the indexer manager for easily starting a separate generic indexer based on the resource type.
- remove the redundant `NewIndexer` `Start` `Find` `Batch` methods for each indexer for a generic method on the `Indexer[T any]` struct
- update the return of the get method on work to be `[]T` instead `T` to cover all the types indexer responses like gpu call which return a slice of gpus
- creating the finders map for easly reusablity of the finders method on new/up/health nodes
- check the uniqueness of the nodes on the batch before inserting to prevent having duplicated data comming from two different triggers like healthy/up or up/new
- modify the default sql-log-level in the makefile
- add more debug logging statement
- update docs

--- a/grid-proxy/Makefile
+++ b/grid-proxy/Makefile
@@ -49,6 +49,7 @@ server-start: ## Start the proxy server			(Args: `m=<MNEMONICS>`)
 		-no-indexer \
 		--address :8080 \
 		--log-level debug \
+		--sql-log-level 4 \
 		--postgres-host $(PQ_HOST) \
 		--postgres-db tfgrid-graphql \
 		--postgres-password postgres \
