--- a/.github/workflows/grid-client-integration.yml
+++ b/.github/workflows/grid-client-integration.yml
@@ -5,7 +5,7 @@ defaults:
     working-directory: grid-client
 on:
   schedule:
-    - cron: "0 3 * * *"
+    - cron: 0 3 * * *
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        network: ["dev", "qa", "test", "main"]
+        network: [dev, qa, test, main]
 
     steps:
       - name: Set up Go
