--- a/.github/workflows/grid-proxy-integration.yml
+++ b/.github/workflows/grid-proxy-integration.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     types: [opened, reopened, review_requested]
   schedule:
-    - cron: "25 5 * * *"
+    - cron: 25 5 * * *
   workflow_dispatch:
 
 jobs:
