add mycelium to readme

--- a/tfrobot/example/test.yaml
+++ b/tfrobot/example/test.yaml
@@ -30,6 +30,7 @@ vms:
   - name: example_b #test deployment of vms with ssd storage
     vms_count: 20
     node_group: group_b
+    mycelium_ip: true
     cpu: 1
     mem: 4
     ssd:
