--- a/tfrobot/example/conf.yaml
+++ b/tfrobot/example/conf.yaml
@@ -21,6 +21,7 @@ vms:
         mount_point: /mnt/ssd
     public_ip4: false
     public_ip6: false
+    mycelium_ip: true
     flist: https://hub.grid.tf/tf-official-apps/base:latest.flist
     entry_point: /sbin/zinit init
     root_size: 0 # root size in GB, 0 for default root size, max 10TB
