--- a/tfrobot/example/test.yaml
+++ b/tfrobot/example/test.yaml
@@ -16,6 +16,11 @@ node_groups:
     free_cpu: 2
     free_mru: 8
 
+  - name: group_d
+    nodes_count: 2
+    free_cpu: 2
+    free_mru: 16
+
 vms:
   - name: example_a #test deployment of vms with public ip
     vms_count: 3
@@ -50,15 +55,13 @@ vms:
     ssh_key: key1
 
   - name: example_d #test deployment with wireguard access
-    vms_count: 3
-    node_group: group_a
+    vms_count: 2
+    node_group: group_d
     cpu: 1
     mem: 1
-    public_ip4: true
-    mycelium_ip: true
+    wireguard: true
     flist: https://hub.grid.tf/tf-official-apps/base:latest.flist
     entry_point: /sbin/zinit init
-    wireguard: true
     ssh_key: key1
 
 ssh_keys:
