--- a/grid-compose/example copy/full_example.yml
+++ b/grid-compose/example copy/full_example.yml
@@ -3,6 +3,9 @@ version: '1.0.0'
 networks:
   net1:
     name: 'miaminet'
+    nodes:
+      - 14
+      - 144
     range:
       ip:
         type: ipv4
@@ -13,6 +16,7 @@ networks:
       wg: true
   net2:
     name: 'cartoonnetwork'
+    node_id: 144
     range:
       ip:
         type: ipv4
