--- a/grid-compose/example copy/multiple_services_diff_network_1.yml
+++ b/grid-compose/example copy/multiple_services_diff_network_1.yml
@@ -3,6 +3,9 @@ version: '1.0.0'
 networks:
   net1:
     name: 'miaminet'
+    nodes:
+      - 14
+      - 144
     range:
       ip:
         type: ipv4
@@ -13,6 +16,7 @@ networks:
       wg: true
   net2:
     name: 'cartoonnetwork'
+    node_id: 144
     range:
       ip:
         type: ipv4
@@ -34,8 +38,7 @@ services:
       cpu: 1
       memory: 2048
       rootfs: 25600
-    network: net1
-    node_id: 14
+    network: net2
   frontend:
     flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
     ip_types:
@@ -48,6 +51,7 @@ services:
       memory: 2048
       rootfs: 25600
     network: net1
+    node_id: 144
   database:
     flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
     ip_types:
