--- a/grid-compose/example copy/multiple_services_diff_network_2.yml
+++ b/grid-compose/example copy/multiple_services_diff_network_2.yml
@@ -3,6 +3,9 @@ version: '1.0.0'
 networks:
   net1:
     name: 'miaminet'
+    nodes:
+      - 14
+      - 144
     range:
       ip:
         type: ipv4
@@ -13,6 +16,7 @@ networks:
       wg: true
   net2:
     name: 'cartoonnetwork'
+    node_id: 144
     range:
       ip:
         type: ipv4
@@ -34,8 +38,20 @@ services:
       cpu: 1
       memory: 2048
       rootfs: 25600
+    network: net2
+  server2:
+    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
+    ip_types:
+      - ipv4
+      - ygg
+    entrypoint: '/sbin/zinit init'
+    volumes:
+      - webdata
+    resources:
+      cpu: 1
+      memory: 2048
+      rootfs: 25600
     network: net1
-    node_id: 14
   frontend:
     flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
     ip_types:
