--- a/grid-compose/example copy/multiple_services_same_network_1.yml
+++ b/grid-compose/example copy/multiple_services_same_network_1.yml
@@ -11,15 +11,6 @@ networks:
         type: cidr
         mask: 16/32
       wg: true
-  net2:
-    name: 'cartoonnetwork'
-    range:
-      ip:
-        type: ipv4
-        ip: 10.20.0.0
-      mask:
-        type: cidr
-        mask: 16/32
 
 services:
   server:
@@ -48,6 +39,7 @@ services:
       memory: 2048
       rootfs: 25600
     network: net1
+    node_id: 14
   database:
     flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
     ip_types:
@@ -59,7 +51,8 @@ services:
       cpu: 1
       memory: 2048
       rootfs: 25600
-    network: net2
+    network: net1
+    node_id: 14
 
 volumes:
   webdata:
