--- a/grid-compose/examples/multiple-services/multiple_services_diff_network_3.yml
+++ b/grid-compose/examples/multiple-services/multiple_services_diff_network_3.yml
@@ -23,10 +23,7 @@ networks:
 
 services:
   server:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
-      - ygg
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - webdata
@@ -35,10 +32,20 @@ services:
       memory: 2048
       rootfs: 2048
     network: net2
+  server2:
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
+    entrypoint: '/sbin/zinit init'
+    volumes:
+      - webdata
+    resources:
+      cpu: 1
+      memory: 2048
+      rootfs: 2048
+    network: net1
   frontend:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     ip_types:
-      - ipv4
+      - ygg
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
@@ -47,11 +54,8 @@ services:
       memory: 2048
       rootfs: 2048
     network: net1
-    node_id: 144
   database:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
