--- a/grid-compose/examples/dependency/multiple_dependencies.yml
+++ b/grid-compose/examples/dependency/multiple_dependencies.yml
@@ -13,45 +13,41 @@ networks:
 
 services:
   server:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
-      - ygg
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - webdata
     resources:
       cpu: 1
       memory: 2048
-      rootfs: 25600
+      rootfs: 2048
     network: net2
+    depends_on:
+      - database
   frontend:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
     resources:
       cpu: 1
       memory: 2048
-      rootfs: 25600
+      rootfs: 2048
     network: net2
     node_id: 144
     depends_on:
       - server
       - database
   database:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
+      - webdata
     resources:
       cpu: 1
       memory: 2048
-      rootfs: 25600
+      rootfs: 2048
     network: net2
 
 volumes:
