--- a/grid-compose/examples/multiple-services/two_services_same_network_1.yml
+++ b/grid-compose/examples/multiple-services/two_services_same_network_1.yml
@@ -1,24 +1,33 @@
 version: '1.0.0'
 
+networks:
+  net1:
+    name: 'miaminet'
+    range:
+      ip:
+        type: ipv4
+        ip: 10.20.0.0
+      mask:
+        type: cidr
+        mask: 16/32
+    wg: true
+
 services:
   server:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     ip_types:
-      - ipv4
       - ygg
     entrypoint: '/sbin/zinit init'
     volumes:
       - webdata
-    node_id: 144
+    node_id: 14
     resources:
       cpu: 1
       memory: 2048
       rootfs: 2048
-
+    network: net1
   database:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
@@ -26,6 +35,7 @@ services:
       cpu: 1
       memory: 2048
       rootfs: 2048
+    network: net1
 
 volumes:
   webdata:
