--- a/grid-compose/examples/multiple-services/two_services_same_network_2.yml
+++ b/grid-compose/examples/multiple-services/two_services_same_network_2.yml
@@ -1,22 +1,9 @@
 version: '1.0.0'
 
-networks:
-  net1:
-    name: 'miaminet'
-    range:
-      ip:
-        type: ipv4
-        ip: 10.20.0.0
-      mask:
-        type: cidr
-        mask: 16/32
-      wg: true
-
 services:
   server:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     ip_types:
-      - ipv4
       - ygg
     entrypoint: '/sbin/zinit init'
     volumes:
@@ -25,20 +12,17 @@ services:
     resources:
       cpu: 1
       memory: 2048
-      rootfs: 25600
-    network: net1
+      rootfs: 2048
+
   database:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
-    ip_types:
-      - ipv4
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     volumes:
       - dbdata
     resources:
       cpu: 1
       memory: 2048
-      rootfs: 25600
-    network: net1
+      rootfs: 2048
 
 volumes:
   webdata:
