--- a/grid-compose/examples/single-service/single_service_3.yml
+++ b/grid-compose/examples/single-service/single_service_3.yml
@@ -10,15 +10,15 @@ networks:
       mask:
         type: cidr
         mask: 16/32
-      wg: true
 
 services:
   server:
-    flist: 'https://hub.grid.tf/tf-official-vms/ubuntu-24.04-full.flist'
+    flist: 'https://hub.grid.tf/tf-official-apps/threefoldtech-ubuntu-22.04.flist'
     entrypoint: '/sbin/zinit init'
     resources:
       cpu: 1
       memory: 2048
       rootfs: 2048
-    node_id: 144
     network: net1
+    ip_types:
+      - myc
