--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,6 +8,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: farmerbot
     id: farmerbot
 
@@ -22,6 +23,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: tfcmd
     id: tfcmd
 
@@ -37,6 +39,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: tf-grid-cli
     id: tf-grid-cli
 
@@ -52,6 +55,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: tfrobot
     id: tfrobot
 
@@ -67,6 +71,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: tfgridproxy
     id: tfgridproxy
 
@@ -82,6 +87,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: gridify
     id: gridify
 
@@ -97,6 +103,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: monitoring-bot
     id: monitoring-bot
 
@@ -110,6 +117,7 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     binary: cache-warmer
     id: cache-warmer
 
