--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @Omarabdul3ziz @AbdelrahmanElawady @xmonader @sameh-farouk @Eslam-Nawara
+* @MarioBassem @ashraffouda @rawdaGastan @Omarabdul3ziz @AbdelrahmanElawady @xmonader @sameh-farouk @Eslam-Nawara
