update pkgs and clean after tests

--- a/.github/workflows/clean_test_account.yml
+++ b/.github/workflows/clean_test_account.yml
@@ -4,8 +4,8 @@ defaults:
   run:
     working-directory: grid-cli
 on:
-  # schedule:
-  #   - cron: "0 9 * * *"
+  schedule:
+    - cron: "0 9 * * *"
   workflow_dispatch:
 
 jobs:
